[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fingerling"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pandas",
    "numpy",
    "scipy"
]

[project.urls]
Repository = "https://github.com/milescsmith/fingerling"
Issues = "https://github.com/milescsmith/fingerling/issues"
Changelog = "https://github.com/milescsmith/fingerling/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fingerling"

[tool.poetry]
name = "fingerling"
version = "0.1.1"
description = "Support package for Alevin tools. Updated and repackaged version of k3yavi/vpolo"
authors = ["Sanskar Jethi <sansyrox@gmail.com>", "Miles Smith <miles-smith@omrf.org>"]

[tool.poetry.dependencies]
python = ">=3.10"
maturin = "1.5.1"
pandas = ">2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
black = "^24.2.0"
mypy = "^1.8.0"
sourcery = "^1.15.0"

